# BLE_2022

./: Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: remove_container_on_close.yaml  update-image.yml
buildtools/: docker-bake.hcl
deployment/: kubernetes.yaml
starling_controller/: bluetooth_cpp_node.launch.xml  run  run.sh
starling_controller/bluetooth_cpp_node/: CMakeLists.txt  package.xml
starling_controller/bluetooth_cpp_node/include/: controller.hpp  main.hpp
starling_controller/bluetooth_cpp_node/launch/: bluetooth_cpp_node.launch.xml
starling_controller/bluetooth_cpp_node/src/: controller.cpp  main.cpp
starling_controller/bluetooth_dongle_cpp_node/: CMakeLists.txt  package.xml
starling_controller/bluetooth_dongle_cpp_node/include/: main.hpp  sender.hpp  serialport.h  slip.h
starling_controller/bluetooth_dongle_cpp_node/launch/: bluetooth_dongle_cpp_node.launch.xml
starling_controller/bluetooth_dongle_cpp_node/src/: main.cpp  sender.cpp  serialport.c  slip.c
starling_controller/bluetooth_msgs/: CMakeLists.txt  package.xml
starling_controller/bluetooth_msgs/msg/: BluetoothDongle.msg
starling_controller/bluetooth_python_node/: package.xml  setup.cfg  setup.py
starling_controller/bluetooth_python_node/bluetooth_python_node/: main.py
